# compilers

./: .gitignore  2526-COMP-requirements.txt  COMP-T2_lexical_analysis.txt  COMP-T3_parsing.txt  COMP-T4_bottomup_parsing.txt  COMP_P2_handout.txt  Language Spec (Automatas design)  _codeql_detected_source_root  modules and descriptions.txt  pdf_to_text.py
modules-template-project-main/: .gitignore  CMakeLists.txt  README.md
modules-template-project-main/.github/workflows/: ci-windows.yml
modules-template-project-main/_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  scanner_main
modules-template-project-main/_codeql_build_dir/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/_codeql_build_dir/src/automata/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/_codeql_build_dir/src/char_stream/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/_codeql_build_dir/src/counter/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/_codeql_build_dir/src/error_mod/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/_codeql_build_dir/src/lang_spec/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/_codeql_build_dir/src/logger/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/_codeql_build_dir/src/module_2/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/_codeql_build_dir/src/module_args/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/_codeql_build_dir/src/out_writer/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/_codeql_build_dir/src/token/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/_codeql_build_dir/src/token_list/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_module_2  test_module_args  test_scanner
modules-template-project-main/build_dbg/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  scanner_main
modules-template-project-main/build_dbg/Testing/Temporary/: CTestCostData.txt
modules-template-project-main/build_dbg/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/build_dbg/src/automata/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/build_dbg/src/char_stream/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/build_dbg/src/counter/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/build_dbg/src/error_mod/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/build_dbg/src/lang_spec/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/build_dbg/src/logger/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/build_dbg/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_module_2  test_module_args  test_scanner
modules-template-project-main/build_dbg_count/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  scanner_main
modules-template-project-main/build_dbg_count/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/build_dbg_count/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_module_2  test_module_args  test_scanner
modules-template-project-main/build_debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  scanner_main
modules-template-project-main/build_debug/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/build_debug/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_module_2  test_module_args  test_scanner
modules-template-project-main/build_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  scanner_main
modules-template-project-main/build_release/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/build_release/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_module_2  test_module_args  test_scanner
modules-template-project-main/build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  scanner_main
modules-template-project-main/build_test/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules-template-project-main/build_test/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_module_2  test_module_args  test_scanner
modules-template-project-main/src/: CMakeLists.txt  main.c  main.h  utils_files.c  utils_files.h
modules-template-project-main/src/automata/: CMakeLists.txt  automata.c  automata.h
modules-template-project-main/src/char_stream/: CMakeLists.txt  char_stream.c  char_stream.h
modules-template-project-main/src/counter/: CMakeLists.txt  counter.c  counter.h
modules-template-project-main/src/error_mod/: CMakeLists.txt  error_mod.c  error_mod.h
modules-template-project-main/src/lang_spec/: CMakeLists.txt  lang_spec.c  lang_spec.h
modules-template-project-main/src/logger/: CMakeLists.txt  logger.c  logger.h
modules-template-project-main/src/module_2/: CMakeLists.txt  module_2.c  module_2.h
modules-template-project-main/src/module_args/: CMakeLists.txt  module_args.c  module_args.h
modules-template-project-main/src/out_writer/: CMakeLists.txt  out_writer.c  out_writer.h
modules-template-project-main/src/token/: CMakeLists.txt  token.c  token.h
modules-template-project-main/src/token_list/: CMakeLists.txt  token_list.c  token_list.h
modules-template-project-main/tests/: CMakeLists.txt  example.c  example.cdbgcnt  test_module_2.c  test_module_2.h  test_module_args.c  test_module_args.h  test_modules.h  test_scanner.c  test_scanner.h
(+151 files in other folders)
